# weox

./: .gitignore  Cargo.toml  README.md  forecast.json  realtime.json  rustfmt.toml
src/: climacell.rs  main.rs  mod.rs  weatherdata.rs
src/backends/: climacell.rs  mod.rs
