[package]
name = "weox"
version = "0.1.0"
authors = ["jeffdc <jeff@nothoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
error-chain = "0.12.2"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.13"
## tokio = { version = "0.2", features = ["full"] }
